@@ -10,6 +10,7 @@ Version 0.4c
 * Yet more typo fixes
 * Twopenny's armor shop added to Rigard shop street (The Observer)
 * Continuation on the combat rewrite:
+ - Fixed some typos and borked stuff
  - Cooldowns on Bash/Grand slam reduced
  - Pierce replaced
  - Dirty blow replaced
@@ -19,6 +20,7 @@ Version 0.4c
  - Backstab replaced
  - Ensnare replaced
  - CrushingStrike replaced
+ - SetTrap replaced, more powerful
 
 --------------------------------------------
              PREVIOUS VERSIONS
